force-app/main/default/objects/Positions_Held__c/Positions_Held__c.object-meta.xml
<CustomObject>
    <label>Positions Held</label>
    <nameField>
        <label>Positions Held Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions Held</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>