force-app/main/default/objects/Positions_Held__c/fields/CurrentJob__c.field-meta.xml
<CustomField>
    <fullName>CurrentJob__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A current job checkbox is required if the person is currently working at that position</description>
    <inlineHelpText>Name of the current position that is being held by the contact</inlineHelpText>
    <label>Current Job</label>
    <type>Checkbox</type>
</CustomField>