force-app/main/default/objects/Positions_Held__c/fields/EmploymentHistory__c.field-meta.xml
<CustomField>
    <fullName>EmploymentHistory__c</fullName>
    <inlineHelpText>Search via lookup about the details of employment history of this Contact. Create a new employment history if needed.</inlineHelpText>
    <label>Employment History</label>
    <referenceTo>EmploymentHistory__c</referenceTo>
    <relationshipLabel>Positions Held</relationshipLabel>
    <relationshipName>PositionHeld</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>