force-app/main/default/objects/Positions_Held__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <inlineHelpText>Enter the date when this position was ended.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>