force-app/main/default/objects/Positions_Held__c/fields/EndYear__c.field-meta.xml
<CustomField>
    <fullName>EndYear__c</fullName>
    <inlineHelpText>Please use this field &apos;End Year&apos; if the Actual &apos;End Date&apos; is not known</inlineHelpText>
    <label>End Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>