force-app/main/default/objects/Positions_Held__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <inlineHelpText>Search via lookup about the details of  position details of this Contact. Create a new Position if needed.</inlineHelpText>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Positions Held</relationshipLabel>
    <relationshipName>PositionHeld</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>