force-app/main/default/objects/Positions_Held__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <inlineHelpText>Enter the date when this position was started.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>