force-app/main/default/objects/Positions_Held__c/fields/StartYear__c.field-meta.xml
<CustomField>
    <fullName>StartYear__c</fullName>
    <inlineHelpText>Please use this field &apos;Start Year&apos; if the Actual &apos;Start Date&apos; is not known</inlineHelpText>
    <label>Start Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>